<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.practica1.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_textfields"
        android:name="com.example.practica1.ui.textfields.TextFieldsFragment"
        android:label="@string/title_textfields"
        tools:layout="@layout/fragment_textfields" />

    <fragment
        android:id="@+id/navigation_buttons"
        android:name="com.example.practica1.ui.buttons.ButtonsFragment"
        android:label="@string/title_buttons"
        tools:layout="@layout/fragment_buttons" />
    <fragment
        android:id="@+id/navigation_info"
        android:name="com.example.practica1.ui.info.InfoFragment"
        android:label="@string/title_info"
        tools:layout="@layout/fragment_info"/>
    <fragment
        android:id="@+id/navigation_lists"
        android:name="com.example.practica1.ui.lists.ListsFragment"
        android:label="@string/title_lists"
        tools:layout="@layout/fragment_lists"/>
    <fragment
        android:id="@+id/navigation_selections"
        android:name="com.example.practica1.ui.selections.SelectionsFragment"
        android:label="@string/title_selections"
        tools:layout="@layout/fragment_selections"/>
</navigation>